1.5.x:
    Fixed #1575 - CentOS fix for Facter SPEC file

    Fixed #1569 - createpackage.sh bug

    Fixed #1567 - createpackage.sh output

    Fixed #1547 - finally killed dots in IP address facts

1.5.2:
    Fixed #1562 - Removed facter from PREREQS

    Fixed #1558 - Updated virtual fact for xenu and xen0

    Fixed #1555 - Ddded operatingsystemrelease for Solaris

    Fixed #1559 - Update to dmidecode fact

1.5.1:
    Added a Process.waitall thread when there's a timeout, to avoid zombies.

    Set the timeout the host-based and resolve-based resolutions to 2.

    Fixed #1495 - CentOS version detection is now better.

    Fixed #1422 - Facter now defaults to 0 timeout.

    Fixes #1492 - added kernelversion fact

    Added virtual fact

    Modified the operatingsystem fact for Debian so it looks in
    /etc/debian_version instead of /proc/version.

    Fixes #1467 - macaddress not set on Ubuntu

    Adding a rake task for creating an archive.

    Adding better SuSE detection for both operatingsystem and release.

    Add sample test and strawman solution for IP parsing code

    Add module level tests for Facter::IPAddress

    Fixed #1425 - Solaris

    Feature #1487: Package creation scripts for Mac OS X

    Feature #1478: Allow specification of --bindir --sbindir --sitelibdir --mandir

    Feature #1475: CONFIG['bindir'] CONFIG['sbindir'] have undesirable defaults on

    Fixes #1467 - macaddress not set on Ubuntu

    Enabled a number of Windows facts - operating system, domain, ipaddress, macaddress, 
    kernel, ipconfig and others 

1.5.0:
    Fixed Rakefile to include additional files including tests et al

    Fixed #1400 - OperatingSystemRelease should now work on CentOS

    Changed 'timeout' option to 'limit' to avoid scope issue

    Fixes #1376 - Display memory facts for AIX

    Fixes #1334 - Forced Facter to use LANG=C

    Fixes #1357 - Change ps syntax for OSX and BSD

    Set the timeout on the AIX kernelrelease fact to 5 seconds.
